welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:11: error: type mismatch;
 found   : Unit
 required: Int
      else if (speed >= 66 && speed <= 85)
           ^caughtSpeeding:3: error: type mismatch;
 found   : Unit
 required: Int
  if (!isBirthday)
  ^